# Network-classification-SDN

./: live_classification_detailed.html  live_classification_report.html  live_classification_results.csv  preprocess_live.py  pyproject.toml  requirements.txt
scripts/: app.py  data_preprocessing_corrected.py  data_preprocessing_final.py  data_preprocessing_fixed.py  live_classifier.py  live_classifier_correct.py  live_classifier_final.py  live_classifier_final_working.py  live_classifier_fixed.py  live_classifier_simple.py  live_classifier_simple_fix.py  live_classifier_with_confidence.py  live_classifier_working.py  live_predict.py  mininet_traffic.py  mininet_traffic_fixed.py  model_tarining_corrected.py  model_training.py  preprocessing.py  simple_app_fixed.py  test_model.py  train_modal.py
web/templates/: index.html
