[project]
name = "network-classification-sdn"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy (==1.21.5)",
    "pandas (==1.3.5)",
    "scikit-learn (==1.0.2)",
    "flask (==2.0.3)",
    "matplotlib (==3.5.1)",
    "seaborn (==0.11.2)",
    "joblib (==1.1.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
